--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "format-check": "prettier --check '**/*.ts'",
     "lint": "eslint src/**/*.ts",
     "package": "ncc build --source-map --license licenses.txt",
-    "test": "jest",
+    "test": "NODE_ENV=test jest",
     "all": "npm run build && npm run format && npm run lint && npm run package && npm test"
   },
   "repository": {
@@ -26,9 +26,11 @@
   "license": "MIT",
   "dependencies": {
     "@actions/core": "^1.10.0",
-    "@actions/github": "^5.1.1"
+    "@actions/github": "^5.1.1",
+    "dotenv": "^16.0.3"
   },
   "devDependencies": {
+    "@types/jest": "^29.2.5",
     "@types/js-yaml": "^4.0.5",
     "@types/node": "^18.11.18",
     "@typescript-eslint/parser": "^5.48.1",
@@ -37,6 +39,7 @@
     "eslint-plugin-github": "^4.6.0",
     "eslint-plugin-jest": "^27.2.1",
     "jest": "^29.3.1",
+    "jest-mock-extended": "^3.0.1",
     "js-yaml": "^4.1.0",
     "prettier": "2.8.2",
     "ts-jest": "^29.0.3",
