--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "format": "prettier --write '**/*.ts'",
     "format-check": "prettier --check '**/*.ts'",
     "lint": "eslint src/**/*.ts",
+    "lint:fix": "eslint src/**/*.ts --fix",
     "package": "ncc build --source-map --license licenses.txt",
     "test": "NODE_ENV=test jest",
     "all": "npm run build && npm run format && npm run lint && npm run package && npm test"
@@ -30,6 +31,7 @@
     "dotenv": "^16.0.3"
   },
   "devDependencies": {
+    "@faker-js/faker": "^7.6.0",
     "@types/jest": "^29.2.5",
     "@types/js-yaml": "^4.0.5",
     "@types/node": "^18.11.18",
@@ -41,6 +43,7 @@
     "jest": "^29.3.1",
     "jest-mock-extended": "^3.0.1",
     "js-yaml": "^4.1.0",
+    "nock": "^13.3.0",
     "prettier": "2.8.2",
     "ts-jest": "^29.0.3",
     "typescript": "^4.9.4"
