--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -25,7 +25,7 @@
       "@typescript-eslint/no-array-constructor": "error",
       "@typescript-eslint/no-empty-interface": "error",
       "@typescript-eslint/no-explicit-any": "warn",
-      "@typescript-eslint/no-extraneous-class": "error",
+      "@typescript-eslint/no-extraneous-class": "off",
       "@typescript-eslint/no-for-in-array": "error",
       "@typescript-eslint/no-inferrable-types": "error",
       "@typescript-eslint/no-misused-new": "error",
