--- a/action.yml
+++ b/action.yml
@@ -7,6 +7,7 @@ inputs:
     required: true
   ignore_branches:
     description: 'Protect those branches that you dont want to be deleted'
+    required: false
 runs:
   using: 'node16'
   main: 'dist/index.js'
