--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "description": "TypeScript template action",
-  "main": "lib/main.js",
+  "main": "src/main.ts",
   "scripts": {
     "build": "tsc",
     "format": "prettier --write '**/*.ts'",
@@ -40,6 +40,7 @@
     "eslint": "^8.31.0",
     "eslint-plugin-github": "^4.6.0",
     "eslint-plugin-jest": "^27.2.1",
+    "github-action-ts-run-api": "^2.3.0",
     "jest": "^29.3.1",
     "jest-mock-extended": "^3.0.1",
     "js-yaml": "^4.1.0",
