--- a/.github/workflows/cleup_branches.yml
+++ b/.github/workflows/cleup_branches.yml
@@ -4,9 +4,7 @@ on:
   schedule:
     - cron: "0 0 * * *" # Run daily at 00:00 UTC
   # Opcionalmente, puedes agregar un evento push para probarlo más fácilmente
-  push:
-    branches:
-      - main
+  pull_request:
 
 jobs:
   cleanup_branches:
