--- a/.github/workflows/cleanup_branches.yml
+++ b/.github/workflows/cleanup_branches.yml
@@ -2,7 +2,7 @@ name: Clean Up Branches
 
 on:
   schedule:
-    - cron: "0 0 * * *" # Run daily at 00:00 UTC
+    - cron: "0 0 * * *"
   pull_request:
 
 jobs:
